--- a/src/index.css
+++ b/src/index.css
@@ -965,7 +965,8 @@ h2 {
 
 /* Input fields */
 .login-box input[type="email"],
-.login-box input[type="password"] {
+.login-box input[type="password"],
+.login-box input[type="text"] {
   width: 100%;
   padding: 14px 18px;
   margin-bottom: 1.5rem;
@@ -979,7 +980,8 @@ h2 {
 }
 
 .login-box input[type="email"]:focus,
-.login-box input[type="password"]:focus {
+.login-box input[type="password"]:focus,
+.login-box input[type="text"]:focus {
   border-color: #6a4c93; /* lavender */
   box-shadow: 0 0 8px rgba(106, 76, 147, 0.6);
 }
@@ -1035,7 +1037,3 @@ h2 {
     font-size: 1rem;
   }
 }
-
-
-
-
